[package]
name = "skstack-rs"
version = "0.1.0"
authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
edition = "2018"

[dependencies]
memchr = { version = "2", default-features = false }
num_enum = "0.5.1"
nix = "0.19.1"
log = "0.4"

[dev-dependencies]
anyhow = "1.0.38"
rand = "0.8.3"
env_logger = "0.8.3"

[[example]]
name = "get-power"
path = "examples/get-power.rs"